[package]
name = "Achernar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webbrowser = "0.8.2"
clap = { version="4.0.8", features=["derive"]}
zip = { version = "0.6", default-features = false, features = ["time"], optional = true }
egui = "0.20.1"
tracing = "0.1.37"
eframe = "0.20.1"
tracing-subscriber = "0.3.15"
tar = "0.4.40"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3.3.0"
self_update = "0.39.0"

