[package]
name = "Achernar"
version = "0.1.0"
edition = "2021"
description = "Описание вашего проекта"
license = "Лицензия"
documentation = "Ссылка на документацию"
homepage = "Ссылка на домашнюю страницу"
repository = "Ссылка на репозиторий"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webbrowser = "0.8.2"
clap = { version="4.0.8", features=["derive"]}
egui = "0.25.0"
tracing = "0.1.37"
eframe = "0.25.0"
tracing-subscriber = "0.3.15"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tempfile = "3.3.0"

env_logger = { version = "0.11.1", default-features = false, features = [
    "auto-color",
    "humantime",
] }

self-replace = "1.3.7"
# self_update = "0.39.0"

flate2 = { version = "1", optional = true }
# flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
either = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
zip = { version = "0.6", default-features = false, features = ["time"], optional = true }
zipsign-api = { version = "0.1.0-a.3", default-features = false, optional = true }
hyper = "1.1.0"
indicatif = "0.17"
quick-xml = "0.31.0"
urlencoding = "2.1"
serde_json = "1"

[features]
tar = ["dep:tar"]
default = ["reqwest/default-tls"]
archive-zip = ["zip", "zipsign-api?/verify-zip"]
compression-zip-bzip2 = ["archive-zip", "zip/bzip2"]
compression-zip-deflate = ["archive-zip", "zip/deflate"]
archive-tar = ["tar", "zipsign-api?/verify-tar"]
compression-flate2 = ["archive-tar", "flate2", "either"]
rustls = ["reqwest/rustls-tls"]
signatures = ["dep:zipsign-api"]

[package.metadata.docs.rs]
# Whether to pass `--all-features` to Cargo (default: false)
all-features = true